# xi_pl

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bugs.txt  features.md  leon_todo.txt  package.json  potential_feature.txt  runtime.js  todo.txt
.github/workflows/: build.yml  integration.yml  py.yml  test.yml
free_var/: Cargo.toml
free_var/src/: lib.rs
kubernetes/: sample_program.ap
parser/: Cargo.toml  build.rs
parser/src/: desugar.rs  error_examples.txt  lib.rs  resolve.rs  rowan.rs  syntax_tree.rs  test_examples
parser/tree-sitter-aplite/: example.aplite  grammar.js  package-lock.json
src/: brackets.rs  free_var.rs  jsprim.rs  judgment.rs  main.rs  nbe.rs  output.rs  prettify.rs  runtime.rs  runtime.ts  xi_free.rs  xi_semantics.rs  xi_syntax.rs
term_macro/: Cargo.toml
term_macro/src/: lib.rs
tree-sitter-aplite/: grammar.js  package-lock.json  package.json
xi-backend/: Cargo.toml  js_prim.rs  jsprim.rs  lib.rs  output.rs  prettify.rs  runtime.rs  runtime.ts  test.js
xi-backends/: Cargo.toml  lib.rs
xi-backends/js_backend/: js_output.rs  js_prim.rs  mod.rs
xi-backends/js_server_backend/: js_output.rs  mod.rs
xi-backends/py_backend/: json_to_ast.py  mod.rs  py_output.rs  py_prim.rs
xi-backends/py_server_backend/: mod.rs  py_output.rs  py_server.py
xi-cli/: Cargo.toml  addition.ap  js_server.js  js_server.ts  main.rs  py_server.js  py_test.py  py_test.ts  remote.ap  server.ts  some_file.js  temp.py  tmp.ap  tmp2.ap
xi-cli/actual_py_js_practice/: async.py  flask_server.py  js_client.ts  js_dereg_test.js  js_deregister.js  js_deregister_unit.js  js_register.js  js_register_unit.js  js_server.ts  js_server_beta.ts  js_test.js  py_client.py  py_deregister.py  py_register.py  py_server.py  py_test_server.py  todo.txt
xi-cli/js_py_sample/js/: js_deregister.js  js_deregister_unit.js  js_register.js  js_register_unit.js
xi-cli/js_py_sample/py/: py_deregister.py  py_deregister_unit.py  py_register.py  py_register_unit.py  py_server_beta.py  py_type_test.py
xi-cli/programs/: external_test.ap  program0.ap  program1.ap  program2.ap  program3.ap  test.ap  tictactoe.ap  ui_feature.txt
xi-cli/programs/tests/: program1.ap  program2.ap  tictactoe.rs
xi-cli/programs/tictactoe/: backend.ap  server.ts  test.ap  tictactoe.ap  tictactoe.html  tictactoe.ts  tictactoe2.ap  tictactoe_runtime.js
xi-cli/programs/type_enum_structs/: Eq_type_imp.ap  tmp.ap
xi-cli/py_async_fix/: py_async_await.py  py_deregister.py  py_register.py  py_server.py  py_server_fix.py  py_test.py
xi-cli/std/: bool.ap  ffi.ap  list.ap  nat.ap  pair.ap  vec.ap
xi-cli/tests/: UI_unit_type.ap  arithmetic_test.ap  dependent_function_app.ap  dependent_type_test.ap  enum_struct.ap  fii_type_test.ap  fn_and_implicit_arg.ap  input_test.ap  js_py.ap  leon_test.ap  module_system.ap  output_test.ap  phoas.ap  pi_and_lam.ap  resolve_prim.ap  sigma_type_want_to.ap  simple.ap  test.ap  with_list.ap
xi-cli/tests/basic/: test.ap  test1.ap  test2.ap  test3.ap
xi-cli/tests/js-py/: dep_test_0.ap  dep_test_2.ap  dep_test_3.ap  enum_test_0.ap  enum_test_1.ap  int_test0.ap  int_test1.ap  int_test2.ap  int_test3.ap  int_test4.ap  int_test5.ap  int_test6.ap  int_to_str0.ap  int_to_str1.ap  str_test0.ap  str_test1.ap  str_test2.ap  str_test3.ap  test0.ap  test1.ap  test2.ap
xi-cli/tests/std_tests/: arithmetic_test.ap  id_test.ap  input_test.ap  new_type.ap  output_test.ap  trait.ap
xi-core/: Cargo.toml  README.md  judgment.rs  lib.rs  nbe.rs  prettify.rs
xi-frontend/: Cargo.toml  README.md  build.rs
xi-frontend/src/: desugar.rs  lib.rs  module_system.txt  resolve.rs  rowan_ast.rs  syntax_tree.rs  test.rs  type_inference.rs
xi-frontend/tree-sitter-aplite/: Cargo.toml  example.aplite  grammar.js  package-lock.json  package.json  test.txt
xi-frontend/tree-sitter-aplite/bindings/node/: binding.cc  index.js
xi-frontend/tree-sitter-aplite/bindings/rust/: lib.rs
xi-k8s/: Cargo.toml  README.md  todo.txt
xi-k8s/.kube/: config
xi-k8s/k8s-yamls/: py-operator-role.yaml  py-operator.yaml  sample-image.yml
xi-k8s/local-test/: js-test.js  py-test.py
xi-k8s/py-operator/: Dockerfile  py_operator.py  server.py
xi-k8s/sample-image/: Dockerfile  requirement.txt  sample.py
xi-kernel/: Cargo.toml  front_to_back.rs  lib.rs
xi-proc-macro/: Cargo.toml  lib.rs
xi-runtime/: Cargo.toml
xi-runtimes/: Cargo.toml  README.md  lib.rs
xi-runtimes/js_runtime/: js_runtime.rs  mod.rs  runtime.ts
xi-runtimes/py_runtime/: mod.rs  py_runtime.rs  run_python.py  runtime.py  runtime2.py
xi-server-backend/: Cargo.toml  js_output.rs  lib.rs  output.rs  py_output.rs  py_sample.py  py_server.py  readme.txt
xi-uuid/: Cargo.toml  lib.rs
