[package]
name = "xi-backend"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
xi-proc-macro = { path = "../xi-proc-macro" }
xi-uuid = { path = "../xi-uuid" }
xi-core = { path = "../xi-core" }
xi-frontend = { path = "../xi-frontend"}
swc_ecma_ast = "0.40"
swc_common = "0.10"
swc_ecma_codegen = "0.48"
url = "2.2"

deno = { git = "https://gitlab.com/fydai1/deno_fork", branch = "fork-v1.8.2" }
deno_core = { git = "https://gitlab.com/fydai1/deno_fork", branch = "fork-v1.8.2" }
deno_runtime = { git = "https://gitlab.com/fydai1/deno_fork", branch = "fork-v1.8.2" }
