[package]
name = "xi-cli"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xi"
path = "main.rs"

[dependencies]
tokio = { version = "1.2", optional = true }
xi-frontend = { path = "../xi-frontend" }
xi-backend = { path = "../xi-backend"}
xi-kernel = { path = "../xi-kernel" }
xi-runtime = {path = "../xi-runtime", optional = true }
xi-proc-macro = { path = "../xi-proc-macro" }
xi-core = { path = "../xi-core" }
xi-server-backend = { path = "../xi-server-backend" }

[features]
deno = ["tokio",  "xi-runtime"]
