[package]
name = "xi-cli"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "xi"
path = "main.rs"

[dependencies]
tokio = { version = "1.2"}
xi-frontend = { path = "../xi-frontend" }
xi-backends = { path = "../xi-backends"}
xi-kernel = { path = "../xi-kernel" }
xi-runtimes = {path = "../xi-runtimes"}
xi-proc-macro = { path = "../xi-proc-macro" }
xi-core = { path = "../xi-core" }
xi-uuid = { path = "../xi-uuid"}

[features]
run-with-server = []
run-no-server = []
