[package]
name = "xi-frontend"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.17"
rowan = "0.12"
xi-uuid = { path = "../xi-uuid" }

[build-dependencies]
cc = "*"
