[package]
name = "xi-frontend"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rowan = "0.12"
tree-sitter = "0.17"
xi-uuid = { path = "../xi-uuid" }
xi-core = { path = "../xi-core" }
xi-proc-macro = { path = "../xi-proc-macro" }


[build-dependencies]
cc = "*"
