[package]
name = "xi-kernel"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>", "Frank Dai <frank@fyd.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
xi-backends = { path = "../xi-backends" }
xi-core = { path = "../xi-core" }
xi-frontend = { path = "../xi-frontend" }
xi-proc-macro = { path = "../xi-proc-macro" }
xi-uuid = { path = "../xi-uuid" }
xi-runtimes = {path = "../xi-runtimes" }
