[package]
name = "xi-runtimes"
version = "0.1.0"
authors = ["leon2k2k2k <liuleon4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
xi-proc-macro = { path = "../xi-proc-macro" }
xi-uuid = { path = "../xi-uuid" }
xi-core = { path = "../xi-core" }
swc_ecma_ast = "0.40"
swc_common = "0.10"
swc_ecma_codegen = "0.48"
num-bigint = {version = "0.2"}
url = "2.2"


deno = { git = "https://github.com/leon2k2k2k/deno", branch = "mybranch" }
deno_core = { git = "https://github.com/leon2k2k2k/deno", branch = "mybranch" }
deno_runtime = { git = "https://github.com/leon2k2k2k/deno", branch = "mybranch" }
